--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,28 +1,12 @@
 version: "3"
 services:
-  postgres:
-    image: postgres
-    container_name: postgres-container
-    environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: outcome_prediction
-    ports:
-      - "5432:5432"
-  table:
-    build:
-      context: ./src/create_table
-      dockerfile: Dockerfile
-    container_name: table-container
-    depends_on:
-      - postgres
-
   expose-api:
     build:
-      context: ./src/expose-api
+      context: ./src/expose_api
       dockerfile: Dockerfile
     container_name: expose-api-container
     ports:
       - "8000:8000"
     depends_on:
-      - table
+      - transformation
+    command: sh -c "sleep 80 && uvicorn api:api --host 0.0.0.0 --port 8000"
