--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,19 +12,20 @@ services:
 
   transformation:
     build:
-      context: ./src/transformation/approach-1
+      context: ./src/transformation/approach-2
       dockerfile: Dockerfile
     container_name: transformation-container
+
     depends_on:
       - postgres
 
   expose-api:
     build:
-      context: ./src/expose-api
+      context: ./src/expose_api
       dockerfile: Dockerfile
     container_name: expose-api-container
     ports:
       - "8000:8000"
     depends_on:
       - transformation
-    command: sh -c "sleep 80 && uvicorn api:api --host 0.0.0.0 --port 8000"
+    command: sh -c "sleep 120 && uvicorn api:api --host 0.0.0.0 --port 8000"
