--- a/src/expose_api/Dockerfile
+++ b/src/expose_api/Dockerfile
@@ -15,3 +15,6 @@ COPY . .
 
 # Expose the FastAPI port
 EXPOSE 8000
+
+# Start the FastAPI application
+CMD ["sh", "-c", "sleep 120 && uvicorn api:api --host 0.0.0.0 --port 8000"]
