exclude-tests-pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -40,7 +40,7 @@ repos:
   hooks:
   - id: mypy
     args: [--disallow-untyped-defs, --disallow-incomplete-defs, --ignore-missing-imports]
-    exclude: (experiments/)
+    exclude: (/test_|tests/|experiments/)
 
  # Checks Python source files for errors.
 - repo: https://github.com/PyCQA/flake8
