--- a/src/transformation/approach_1/Dockerfile
+++ b/src/transformation/approach_1/Dockerfile
@@ -21,7 +21,7 @@ RUN apt-get install -y libpq-dev
 
 # Install Python packages
 COPY requirements.txt requirements.txt
-RUN pip3 install -r requirements.txt
+RUN pip3 install --no-cache-dir -r requirements.txt
 
 # Download PostgreSQL JDBC driver
 RUN wget -P /app https://jdbc.postgresql.org/download/postgresql-42.2.24.jar
